--- a/src/ChatLikeQQOnActiveMQ.Client/View/MainWindow.xaml
+++ b/src/ChatLikeQQOnActiveMQ.Client/View/MainWindow.xaml
@@ -2,9 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ChatLikeQQOnActiveMQ.Client"
+        
         Title="MainWindow" Height="800" Width="400" Loaded="WindowResizer_Loaded"  WindowStyle="None" ResizeMode="NoResize" MouseLeftButtonDown="WindowResizer_MouseLeftButtonDown">
     <local:WindowResizer.Resources>
-        <Style TargetType="ListBox">
+        <!--<Style TargetType="ListBox">
             <Setter Property="BorderThickness" Value="1"></Setter>
             <Setter Property="BorderBrush" Value="Blue"></Setter>
             <Setter Property="ItemTemplate">
@@ -29,7 +30,7 @@
                     
                 </Setter.Value>
             </Setter>
-            <!--<Setter Property="ItemContainerStyle">
+            <Setter Property="ItemContainerStyle">
                 <Setter.Value>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="Template">
@@ -41,8 +42,10 @@
                         </Setter>
                     </Style>
                 </Setter.Value>
-            </Setter>-->
-        </Style>
+            </Setter>
+        </Style>-->
+
+        <local:DataGenerator x:Key="data"></local:DataGenerator>
     </local:WindowResizer.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -69,7 +72,47 @@
             
         </Grid>
         <Grid Grid.Row="1">
-           
+            <ListBox ItemsSource="{StaticResource data}">
+                <ListBox.ItemTemplate>
+                    <HierarchicalDataTemplate>
+                        <Grid Margin="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="50"></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+                            <Border CornerRadius="30" Height="30" Width="30" Background="LightBlue">
+                                <Image ></Image>
+                            </Border>
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition></RowDefinition>
+                                    <RowDefinition></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding UserName}"></TextBlock>
+                                <TextBlock Grid.Row="1" Text="{Binding PersonalizedSignature}"></TextBlock>
+                            </Grid>
+                        </Grid>
+                    </HierarchicalDataTemplate>
+                    
+                </ListBox.ItemTemplate>
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="Background" Value="Transparent"></Setter>
+                        <Setter Property="Margin" Value="1,1,1,1"></Setter>
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter Property="Background" Value="LightGray"></Setter>
+                            </Trigger>
+                            <Trigger Property="IsSelected" Value="false">
+                                <Setter Property="Background" Value="Transparent"></Setter>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" Value="LightCyan"></Setter>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
         </Grid>
     </Grid>
 </local:WindowResizer>
